# Machine-Learning-is-ALL-You-Need

./: .gitignore  1Single_Linear_Regression.py  2Multiple_Linear_Regression.py  3Logisitc_Regression.py  5Support_Vector_Machine.py  README.md
.github/: FUNDING.yml
01Single_Linear_Regression/: 1Single_Linear_Regression.py  readme.md
02Multiple_Linear_Regression/: 2Multiple_Linear_Regression.py
03Logistic_Regression/: 3Logistic_Regression.py  readme.md
04K_Nearest_Neighbours/: readme.md
05Support_Vector_Machine/: kernels.py  readme.md
06Naive_Bayes/: 6Naive_Bayes.py  readme.md
07Decision_Trees/: Decision_Trees_Clf.py  Decision_Trees_Reg.py  readme.md
08Random_Forest/: Random_Forest_Clf.py  readme.md
09Neural_Network/: 9Neural_Network.py  readme.md
10CNN/: 10CNN.py  CNN_models.py  conv2d.py  maxpool.py  readme.md  softmax.py
11LSTM/: 11LSTM.py  LSTM_models.py  readme.md
12PCA/: 12PCA.py  readme.md
13Kmeans/: 13Kmeans.py  readme.md
14Boost/: AdaBoost.py  GBDT.py  Xgboost.py  readme.md
15DQN/: 15DQN.py  Q_learning.py  env.py  readme.md
16PPO/: 16PPO.py  TRPO.py  readme.md  vanilla_PG.py
17Actor_Critic/: 17Actor_Critic.py
18DDPG/: 18DDPG.py
1Single_Linear_Regression/: 1Single_Linear_Regression.py
2Multiple_Linear_Regression/: 2Multiple_Linear_Regression.py
3Logistic_Regression/: 3Logistic_Regression.py
4K_Nearest_Neighbours/: 4K_Nearest_Neighbours.py
5Support_Vector_Machine/: readme.md  (+1 more)
RL_DDPG/DDPG_LibTorch-master/: CMakeLists.txt  README.md  agent.cpp  agent.h  ddpg_model.cpp  ddpg_model.h  main.cpp  replayBuffer.h
(+132 files in other folders)
